# caehlcettel

./: .gitignore  README.md  c-base-serial-printer.service  caehlcettel.css  caehlcettel.desktop  caehlcettel.py  pyproject.toml  rendering.py  run_caehlcettel.sh
examples/: clock.py
templates/: zettel.html.j2
tests/: test_rendering.py
